--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"Blog Title",
     "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "avatarUrl":"file:///Users/krien/Desktop/b_d42d299b2dee534fb0fc8b28a66391ae.jpg",
     "GMEEK_VERSION":"last"
 }
