--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"Blog Title",
     "subTitle":"Blog description",
-    "avatarUrl":"file:///Users/krien/Desktop/b_d42d299b2dee534fb0fc8b28a66391ae.jpg",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/138383067?u=3a3b943d9fd9c9dd391f3c700b094443966b7116&v=4",
     "GMEEK_VERSION":"last"
 }
