--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"Blog Title",
     "subTitle":"Blog description",
-    "avatarUrl":"https://avatars.githubusercontent.com/u/138383067?u=3a3b943d9fd9c9dd391f3c700b094443966b7116&v=4",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/138383067?v=4",
     "GMEEK_VERSION":"last"
 }
