--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
+    "title":"Krien's Blog",
+    "subTitle":"一个跨考408的人",
     "avatarUrl":"https://avatars.githubusercontent.com/u/138383067?v=4",
     "GMEEK_VERSION":"last"
 }
